--- a/myapp/home.html
+++ b/myapp/home.html
@@ -1,90 +1,86 @@
- <!DOCTYPE html>
-        <html>
-            {% load staticfiles %}
-                <head>
-                    <title>Data</title>
-                    <style>
+<!DOCTYPE html>
+    <html>
+    {% load staticfiles %}
+    <head>
+        <title>Data</title>
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script>
+            function drawgraph(){
+                var width = 800;
+                var height = 200;
+                var root = d3.select('#chart').append('svg')
+                .attr({
+                    'width': width,
+                    'height': height,
+                })
+                .style('border', '1px solid black');
 
-                
+                var durations = {{ chart_data | safe }};
+                var cities = {{ chart_cities | safe }}
+                var maxValue = d3.max(durations);
+                var barHeight = height / durations.length;
+                var barWidth = function(datum) {
+                    return datum * ((width-150) / maxValue);
+                };
+                var barX = 150;
+                var textX = 0;
+                var barY = function(datum, index) {
+                    return (index) * barHeight;
+                };
+                var textY = function(datum, index) {
+                    return (index+1) * (barHeight-1);
+                };
+                var bar = root.selectAll('g')
+                    .data(durations).enter()
 
-                    </style>
+                    .append('g')
 
-                    <script src="http://d3js.org/d3.v3.min.js"></script>
-                    <script>
+                bar.append("rect")              
+                    .attr({
+                        'class': 'number',
+                        'x': barX,
+                        'y': barY,
+                        'width': barWidth,
+                        'height': barHeight,
+                        'fill': '#0f0',
+                        'stroke': '#00f',
+                    });
+                bar.append("text")
+                    .attr("x", textX)
+                    .attr("y", textY)
 
-
-
-                    function drawgraph(){
-                        var width = 800;
-                        var height = 200;
-                        var root = d3.select('#chart').append('svg')
-                        .attr({
-                            'width': width,
-                            'height': height,
-                        })
-                        .style('border', '1px solid black');
-
-                        var durations = {{ chart_data | safe }};
-                        var cities = {{ chart_cities | safe }}
-                        var maxDataValue = d3.max(durations);
-                        var barHeight = height / durations.length;
-                        var barWidth = function(datum) {
-                            return datum * ((width-150) / maxDataValue);
-                        };
-                        var barX = 150;
-                        var textX = 0;
-                        var barY = function(datum, index) {
-                            return (index) * barHeight;
-                        };
-                        var textY = function(datum, index) {
-                            return (index+1) * (barHeight-1);
-                        };
-                        var bar = root.selectAll('g')
-                            .data(durations).enter()
-
-                            .append('g')
-
-                        bar.append("rect")              
-                            .attr({
-                                'class': 'number',
-                                'x': barX,
-                                'y': barY,
-                                'width': barWidth,
-                                'height': barHeight,
-                                'fill': '#0f0',
-                                'stroke': '#00f',
-                            });
-                        bar.append("text")
-                            .attr("x", textX)
-                            .attr("y", textY)
-
-                            .text(function(d,i) {   return cities[i]; });
-                    }
+                    .text(function(d,i) {   return cities[i]; });
+            }
 
 
 
-                    </script>
+        </script>
 
 
-                </head>
+    </head>
 
-                <body onload="drawgraph()">
-          
-                    <h1>Distance and estimated time to arrive to various cities from Krakow:</h1>
+    <body onload="drawgraph()">
 
-                    <div>
-                        <ul>
-                            {% for city,info in destianions_with_time.items %}
-                                <li>
-                                <b>{{ city|safe }}</b><br>
-                                Distance: {{ info.distance_text | safe }}
-                                duration: {{ info.duration_text | safe }}
-                                </li>
+        <form>{% csrf_token %}
+            Origin city: <input type="text" name="origin"><br>
+            <input type="submit" value="Submit">
+        </form>
 
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <h1>Chart of durations drawn using d3 library:</h1>
-                    <div id="chart"></div>
-                </body>
-            </html>
+        <h1>Distance and estimated time to arrive to various cities from {{ origin }} :</h1>
+
+        <div>
+            <ul>
+                {% for city,info in destianions_with_time.items %}
+                    <li>
+                    <b>{{ city|safe }}</b><br>
+                    Distance: {{ info.distance_text | safe }}
+                    duration: {{ info.duration_text | safe }}
+                    </li>
+
+                {% endfor %}
+            </ul>
+        </div>
+        <h1>Chart of durations drawn using d3 library:</h1>
+        <div id="chart"></div>
+    </body>
+</html>
